rpi5/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  serviceName: bazarr
  template:
    metadata:
      name: bazarr
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.4.5@sha256:88684337f4e3ea6c47623e47c5c27f798ed0d24fbca3e08c8d04be7a2b8a5668
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 6767
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETUID
                - SETGID
      restartPolicy: Always
      volumes:
        - name: data
          nfs:
            path: /data
            server: 192.168.1.52
            readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
