rpi5/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6767
  type: ClusterIP
